syntax = "proto3";

package proto;

service AccountService {
    // 注册
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {
    }

    // 登录
    rpc SignIn (SignInRequest) returns (SignInResponse) {
    }

    // 退出
    rpc SignOut (SignOutRequest) returns (SignOutResponse) {
    }
}

message SignUpRequest {
    string userName = 1;
    string pwd = 2;
    int32 roleType = 3;
}


message SignUpResponse {
    string sessionId = 1;
}

message SignInRequest {
    string userName = 1;
    string pwd = 2;
}

message SignInResponse {
    // AccountInfo accountInfo = 1;
    SessionInfo sessionInfo = 2;
}

message AccountInfo {
    int32 id = 1;
    int32 pid = 2;
    string userName = 3;
    string nickname = 4;
    string pwd = 5;
    string email = 6;
    string phone = 7;
    string remark = 8;
    string address = 9;
    int32 privilegeId = 10;
    int32 roleId = 11;
    string stat = 12;
    string llTime = 13;
    string cTime = 14;
    string changeTime = 15;
}

// TODO session的消息体
message SessionInfo {
    string sessionId = 1;
    string userName = 2;
    string accountId = 3;
    string TTL = 4;
}

message SignOutRequest {
    string sessionId = 1;
}

message SignOutResponse {
    bool result = 1;
}


