syntax = "proto3";

package dbops;

service GroupService {
    // 通过账户id获取群组
    rpc SelectGroupsByAccountId (AId) returns (GroupsList) {
    }
}

message AId {
    string accountId = 1;
}

message GroupsList {
    repeated GroupInfo groupId = 1;
}

message GroupInfo {
    int32 groupId = 1;
    int32 accountId = 2;
    string groupName = 3;
    string status = 4;
    string createTime = 5;
}

